new simulations with 40mm in 1h

--- a/echoRD2D_Weierbach_prep.ipynb
+++ b/echoRD2D_Weierbach_prep.ipynb
@@ -766,10 +766,10 @@
       "    [zs,ys]=np.shape(thS)\n",
       "    ax1.set_xlim((0,ys))\n",
       "    ax1.set_ylim((zs,0))\n",
-      "    ax1.set_xticks(np.arange(5)*np.round(ys/5.,-1).astype(int))\n",
-      "    ax1.set_yticks((np.arange(5)*np.round(zs/5.,-1).astype(int))[::-1])\n",
-      "    ax1.set_xticklabels(np.arange(5)*np.round(ys/5.,-1)*mc.grid_sizefac)\n",
-      "    ax1.set_yticklabels((-(np.arange(5)*np.round(zs/5.,-1))*mc.grid_sizefac)[::-1])\n",
+      "    ax1.set_xticks(np.arange(5)*0.5*np.round(ys/2.5,-1).astype(int))\n",
+      "    ax1.set_yticks((np.arange(5)*0.5*np.round(zs/2.5,-1).astype(int))[::-1])\n",
+      "    ax1.set_xticklabels(np.arange(5)*0.5*np.round(ys/2.5,-1)*mc.grid_sizefac)\n",
+      "    ax1.set_yticklabels((-(np.arange(5)*0.5*np.round(zs/2.5,-1))*mc.grid_sizefac)[::-1])\n",
       "    #ax1.text(40,-5,'width [m]')\n",
       "    ax1.text(-30,zs*0.75,'depth [m]',rotation='vertical')\n",
       "    ax1.text(ys*1.05,zs*1.05,'width [m]')\n",
@@ -781,7 +781,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -797,62 +797,31 @@
        "output_type": "display_data",
        "png": "iVBORw0KGgoAAAANSUhEUgAAAcEAAAEYCAYAAAAkik0PAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X10VOW99vFrkkkmkskLAdIipsEXUMIpQcJjhQJBaEtr\nqKXAKHhKaElFOfW4IqAWLfKilZeKK6YYJcBphKpBKBwsLfV5JIiViqQRUZMqGIFSIBBIIJMYEobs\n54+QKZEkMwOZSZj9/azFWpm975n9m81krtx77/veFsMwDAEAYEIhHV0AAAAdhRAEAJgWIQgAMC1C\nEABgWoQgAMC0CEEAgGkRggAA0yIEAQCmZe3oAgAAndemTZv0hz/8QQ0NDTpw4IDee+89SdLMmTM1\nefJk/etf/9KOHTt09uxZHT58WPfdd5/GjRunLVu2qLa2Vg6Ho4PfQdsIQQBAm2JiYvTCCy9o2LBh\nLa6vrq7WqlWrdOjQIT3wwAMaN26cxo4dG+AqLw+HQwEAbbr++usvWXbxjJv9+vWTJPXs2VP19fUB\nq6s90BMEALQpJKSxv+RyuVRbW6vQ0FB9/vnn7vUWi8X989U2HTUhCADwSnp6uu6++24lJCSoV69e\nLbZpCsSr5ZyghbtIAADMinOCAADTIgQBAKZFCAIATIsQBAB4pbVxgt4aNWpUpxtCQQgCAALi4qEU\nnQVXhwIAWnXxtGmlpaUaNmyYjh49qltuuUXz5s3T8ePHNW/ePJ07d04nTpxQZmamRo8ere3bt+uF\nF16QJCUlJWnBggUaPXq0br/9dh0+fFgWi0UvvPCCoqKiWtzuf/3Xf6m6ulqGYWjPnj3Ky8vT4MGD\n2/390RMEALQpJiZGr776qmpra/XII4/otdde0+nTp7V9+3Z98cUXysjI0OrVq7Vw4UK9+uqrOn/+\nvJ566imtXLlSGzZsUGJiosrKyiRJDodDa9euVa9evbRz585Wt5mTk6M1a9bo1ltv1X333eeXAJQY\nLA8A8KBp2rSePXvq61//uiRp4MCBOnDggEaMGKEXX3xRGzZskCSdO3dOlZWViomJUdeuXSVJGRkZ\nkhoPh/bv31+S1L17d509e7bN7f7P//yPKisr9dRTT/nlfUn0BAEAHjRNm3b8+HGdPHlSklRUVKQ+\nffro+eef17hx47RkyRJ961vfkmEY6tatm5xOp6qqqiRJTz/9tD766COfplRbv369PvjgAy1cuLD9\n39BF6AkCALzStWtXPf300yorK9OgQYM0fPhwVVVVacmSJcrNzdXXvvY1nT59WhaLRU8++aSmT5+u\n0NBQJSUlacCAAc0ujGnrIpmTJ09q/vz5GjRokKZOnSpJuueee5SWltbu74kLYwAApkVPEADQIY4d\nO6ZHH33U3Ss0DEMWi0W33XabHnzwwYDUQE8QAGBaXBgDADAtQhAAYFqEIADAtAhBAIBpEYIAANMi\nBAEApkUIAgBMK6gGy7+99wut+9vfLpmf7uKBmF9d5klL7S53aGVLz/O1jkAN6/Rle962ba/339Z2\nmuY4DOTw19Y+I619Di0WS7N1be2Xll7D0z7zx3v/6jbbaxve/K62tH1/btsXX/2/9Mc2/CEs1KqH\nfzhG1/fs2tGldLigGiwfl/kdVXbd1tFlAECn17c6Q5/9ZlVHl9HhgioE/7z7U2Vv3aqz9a7mf1Ea\nhtTSX+EXLW/RhXYt/hXs6XmtrL/4tb5aW1uv1+z9ePvXZEtt23t7F+2jFtt+Zdkl79+bmr7y/2Co\nrd5Xg0IsIb7tJ29q8LK2ZqvUQs/m4n17Udu29ssln+VWttfs+S2tv4L32Nr782obHuppaR+1+L69\nfU9efsa93kYbr9HS/2Wb2/C15iv9fW/FO66lsjSE69ySfykkpHP0TjtKUB0OvfO2W9QtOlKnq2s7\nuhQA6LQ+zSvU8R7r9cddJfrR0P6ttquvr9fmzZsVFhammJgY3XHHHQGsMjC4MAYATGZgt29Lklbt\neLPNdidOnNCGDRs0bty4oAxAiRAEANNJu/X/SJJ2lrUdgitWrNDnn3+upKQkrVu3Trt371ZGRoZm\nzJih8ePHa926dXr44Yd15513Kj8/X5K0e/du3XvvvZoyZYqeeOIJnT9/XmfOnNFDDz3k9/d1OYLq\ncCgAwLO+13VX2NtJqoz6q05Xn1WsPaLFdg888ID27dun4cOHu5edOHFCmzdv1scff6zMzEy99dZb\nOnbsmP77v/9bkyZN0ty5c/Xaa68pLi5Ozz//vDZu3CiHw6Hs7OxAvT2fEIIAYELfUKpKw0q08s2d\nemTCaK+f16dPH4WEhCgqKkoJCQkKDQ1VTEyM6urqVFFRofLycmVmZkqS6urqNHToUH+9hXZBCAKA\nCX07YYhKq1/UuqK/tBqCISEhamhoaLasxSuZL4iLi1PPnj2Vk5Mju92ugoICRUZGtn/x7YhzggBg\nQmmDkyVXuD758v+12qZbt25yuVyqq6trcX1LQ2cef/xxTZ8+XZMmTdJrr72mPn36dOpzgkE1TlCS\n3v/0MEMkAMALE1++X9Xd35YxL6hiwCf0BAHApG65ZpgkqaGBEAQAmMyMO+5S71PTVV1b39GldBgO\nhwKAiZ2tP6fUb96o2KiWh0kEO3qCAIAWGYahefPmadKkSUpPT9fhw4ebrc/Ly9PYsWOVnp6u9PR0\nHTx40KvX7UwXyTBEAgDQorfeekv19fXKz8/X3r17tWjRIuXk5LjXFxcXa+nSpUpKSvLpdTvTwHlC\nEADQoqKiIvdsMcnJyfrkk0+arS8uLtaKFStUXl6ukSNHavr06dq0aZO2b9+us2fP6uTJk5oyZYq2\nbdum/fv367HHHtOoUaM0bNgwvfvuu5oyZYr69eun/fv3q6amRs8//7x69uwZ0PfI4VAAQIuqq6sV\nFRXlfmy1WpsNnk9LS9OCBQu0Zs0aFRUVaceOHZKkmpoa5ebm6uc//7ny8/O1fPlyLVy4UBs3brxk\nG8nJyfrd736nIUOGaMuWLf5/U19BCAIAWmS321VTU+N+3NDQoJCQf8fG1KlTFRsbK6vVqtTUVJWU\nlEiS+/BoVFSUbrjhBklyT632Vf369ZMk9ezZs9VB+f5ECAIAWjRo0CB37+7DDz9U37593euqq6s1\nduxY1dbWyjAM7dq1S/37N96bsK2bPn+VL239gXOCAIAWffe739XOnTs1adIkSdKiRYu0ZcsW1dbW\nyuFwaObMmZoyZYpsNpuGDBmiESNGaNOmTV6/fkcHoBRs4wRnz1bdK6+aevYDAPCNobp9Xyg2pktH\nF9IhAh6CBQUFysnJkdVq1YQJE+RwOJqtr6ys1OzZs1VXV6f4+HgtWrRINpvNuxdvaNC+D/6hyuov\n/VA5AASfcw2GBt2erC5dvPyeDTIBDUGXy6U777xTGzdulM1m0+TJk5Wbm6u4uDh3m6efflr/8R//\noXHjxik3N1fh4eH66U9/GqgSAQAmEtBzgqWlpUpMTJTdbpckpaSkqLCwUGPGjHG3+eCDDzRjxgxJ\n0ogRI5SVlUUIAkCgWCw69MoGnR2e6peXf3V7oRYeuLPllWdjZKtLULSRoG5hCeplT9D13RJ0S88E\nDUhMUEqf6xQXfU271hPQEHQ6nc3GnERGRsrpdDZrU1NT427T0noAgH8dP35Slccr/PLaQ5Nu1LIu\n76jkX//SPyvKVFZ9XBXnjslpHFNt2BHVXfNPlds+UbmkTw1JJy/8+7jx+Zba7oqoS1CMEtTDlqBe\nUQm6oVuC+vVK0MDrEzTopl7qEhHmdT0BCcGsrCwVFRVp3759Sk5Odi+vqalRdHR0s7aRkZGqrq5W\nXFxcs0BsS8nRGo9tAAAtS4izKSoicH2i/r2/pv69v9bq+vLTNdp/tFwHy4/rnxVlOvFlmSrPlclp\nOaqzYUdUG/mpasP2qEzSxy5Jxy/8+0CSYVHIl19Tl/rr5cz6m8daAvKuMzMzJTWeE0xLS1NVVZUi\nIiJUWFiojIyMZm0HDRqkd955R+PGjdM777yjwYMHB6JEAEAn0SM2Uj1iIzVUvVtc39Bg6NipKu0/\n1hiUh08fU3ntcZ12lanGclS1EQdU3fU9na4+q1h723fHCOjhUKvVqjlz5mjatGkyDEMOh0Px8fE6\nc+aM5s6dq+zsbM2YMUOPPfaYXn/9dXXt2lXLli0LZIkAgE4uJMSiXj1i1KtHjKSbLlm/+b2P9GKF\no/OFoCSNHDlSI0eObLYsJibGPat4t27dtGrVqkCXBQAwIaZNAwAEFV8moiEEAQCmRQgCAEyLEAQA\nmBYhCAAIKr5MBkoIAgBMixAEAJgWIQgAMC1CEAAQVBgnCAAwLYsPKUgIAgCCCj1BAIDpNXgxVoIQ\nBAAElfPnG8MvxIsuISEIAAgq540Gr9sSggCAIOP9lDGEIAAgqFgs3kcbIQgACCqhDJEAAJgV4wQB\nAKbV0MA5QQCASXF1KAAAXiAEAQBBhXOCAADTChEhCAAwKSbQBgDAC4QgACCoeD9AghAEAAQbH1KQ\nEAQAmBYhCAAwLUIQAGBahCAAwLQIQQCAaRGCAIDgwmB5AIBZdZoZYwoKCjRx4kRNmjRJ69evb7Vd\nXl6ennvuuWaPx44dq/T0dKWnp+vgwYP+LBMAEESaJtA2vBgvaPVXES6XS4sXL9bGjRtls9k0efJk\njR49WnFxce42dXV1euKJJ/Txxx9rzJgx7uXFxcVaunSpkpKS/FUeACBINd1U15seod96gqWlpUpM\nTJTdbldYWJhSUlJUWFjYrE1dXZ3Gjx+vGTNmNFteXFysFStW6N5771Vubq6/SgQABKPOMGOM0+lU\nVFSU+3FkZKScTmezNtHR0Ro6dKiMr/RZ09LStGDBAq1Zs0ZFRUXasWOHv8oEAJhYux8OzcrKUlFR\nkfbt26fk5GT38pqaGkVHR3v1GlOnTpXdbpckpaamqqSkRKmpqe1dKgDA5Nq9J5iZmam1a9dq586d\nOnTokKqqqlRfX6/CwkINHDjQ4/Orq6s1duxY1dbWyjAM7dq1S/3792/vMgEA8N+FMVarVXPmzNG0\nadNkGIYcDofi4+N15swZzZ07V9nZ2S0+z263a+bMmZoyZYpsNpuGDBmiESNG+KtMAECQ8WWIhMX4\n6gm5q1DJ0ZqOLgEArloJcTZFRVzoE1ks2v3cS6ocfkfHFnUF3tj1kXJOOXTg/kr1/npsm20ZLA8A\nMC1CEAAQVHw5vkkIAgBMixAEAJgWIQgAMC1CEABgWoQgAMC0CEEAgGkRggAA0yIEAQCmRQgCAIKK\nxYdkIwQBAEElxIcZtAlBAEBQaZo2rcGL+dMIQQBAUHE1NEjyrkdICAIAgophNHjdlhAEAAQZzgkC\nAEzKwoUxAACzCiUEAQDwjBAEAAQV7iwPAIAXCEEAgGkRggCAoOLDdTGEIAAguDBEAgBgWoYPV8YQ\nggCAoHKeEAQAwDNCEAAQVJgxBgBgWiEhhCAAwKS4qS4AwLSarg7lproAANPh6lAAALxACAIATMsa\n6A0WFBQoJydHVqtVEyZMkMPhaLa+vLxcjzzyiFwul2JiYvSb3/xGXbp0CXSZAAATCGhP0OVyafHi\nxcrLy9PatWu1bt06VVRUNGuzcuVKjR8/Xr///e/Vr18/rV+/PpAlAgBMJKAhWFpaqsTERNntdoWF\nhSklJUWFhYXN2jz++OO666671NDQoGPHjik6OjqQJQIATCSgIeh0OhUVFeV+HBkZKafTeUk7l8ul\nH/7wh9q9e7duv/32QJYIALjKhcj7wfIBOSeYlZWloqIi7du3T8nJye7lNTU1Lfb0rFar/vSnP+m9\n997To48+qrVr1waiTABAEOh09xPMzMzU2rVrtXPnTh06dEhVVVWqr69XYWGhBg4c2KztggUL9P77\n70uSunTpopAQLmAFAHjPl/sJBvTqUKvVqjlz5mjatGkyDEMOh0Px8fE6c+aM5s6dq+zsbE2ZMkXz\n5s1TTk6OQkJCNG/evECWCAC4yjVloDfTpgV8iMTIkSM1cuTIZstiYmKUnZ0tSbrhhhs4/AkAuGzn\nzzNtGgDApM4bDV63JQQBAEGmsSdo8eIqUUIQABBULBbvo40QBAAElaY7yxvifoIAALSKEAQABBXu\nJwgAMC3jwtWhXBgDADChxvDzZuIYQhAAEFRCL0y36c2MMYQgACCohIZ4P3coIQgACEr0BAEAptOU\nfVwYAwAwHeNCCnJhDADAdLwfJUgIAgBMjBAEAAQVgxljAABmRQgCAOAFQhAAYFqEIAAgqISEcFNd\nAIBJeTM+sAkhCAAIKpamO8t7cX0MIQgACCrMGAMAMK0L99T1CiEIADAtQhAAEFQafJg9lBAEAJgW\nIQgAMC1CEABgWoQgACCo+DBWnhAEAAQXiw9TxhCCAADTIgQBAKZFCAIAgkqnOSdYUFCgiRMnatKk\nSVq/fn2r7Xbv3q2RI0e6H+fl5Wns2LFKT09Xenq6Dh486M8yAQAmZfXXC7tcLi1evFgbN26UzWbT\n5MmTNXr0aMXFxTVrV1ZWpry8PLlcLvey4uJiLV26VElJSf4qDwAQpLyfL8aPPcHS0lIlJibKbrcr\nLCxMKSkpKiwsbNamvr5e8+fP1/z585stLy4u1ooVK3TvvfcqNzfXXyUCAIKRDynotxB0Op2Kiopy\nP46MjJTT6WzWZuHChZo2bZri4+ObLU9LS9OCBQu0Zs0aFRUVaceOHf4qEwBgYu1+ODQrK0tFRUXa\nt2+fkpOT3ctramoUHR3tfnzixAkVFRXpn//8pwzD0OnTpzVr1iwtW7ZMU6dOld1ulySlpqaqpKRE\nqamp7V0qAMDk2j0EMzMzJTWeE0xLS1NVVZUiIiJUWFiojIwMd7v4+Hht3brV/XjYsGFatmyZqqur\nNXbsWG3dulURERHatWuXJk6c2N5lAgDgvwtjrFar5syZo2nTpskwDDkcDsXHx+vMmTOaO3eusrOz\nW3ye3W7XzJkzNWXKFNlsNg0ZMkQjRozwV5kAgGDjwxgJi9F0H/qrWMnRmo4uAQCuWglxNkVFXOgT\nWSza/dxLqhx+R8cWdQU27/pIL55y6MD9ler99dg22zJYHgAQXDrD1aEAAHQE7iwPAIAXCEEAQFDx\n5VIXQhAAYFqEIAAgqHBTXQCAaYUSggAAswoJIQQBACbX4MUFMoQgAMC0CEEAQFBp6gCGeHFusNUJ\ntOvr6z0+OTw83PuqAAAIAF/GCbYagoMHD1aPHj0ueTGLxSLDMFRRUaEPP/zw8qsEAMAPvDkX2KTV\nEBw6dKheeumlVp/4wAMP+FYVAACdTKsh2BSA58+f1/79+5sdHh0wYECbAQkAwNXA4011p0+frvr6\nekVHR0tqPBy6fPlyvxcGAMDlsPhwV12PIVhXV6ff//73V1QQAACdkccQHDx4sP7617/qxhtvdC+7\n9tpr/VoUAACXy4dZ0zyH4KlTp/TMM880Oxyan59/2cUBANBZeAzBL774Qlu3bg1ELQAABJTHGWNu\nvvlmffjhh6qvr3f/AwAgGHjsCRYWFurtt992P7ZYLNq2bZs/awIAICBaDcH3339f3/rWt/THP/6x\nzfUAAFytWg3BZ555Ro888kiL6wzD0LPPPqvNmzf7rTAAAC6HD7OmtR6CSUlJ+tOf/tTqE5OSknwq\nCgCAzqbVEFy0aFEg6wAAIOC4nyAAwLQIQQCAaXkcIuF0OrVz506dPXvWvWzcuHF+LQoAgEDwGIK/\n+MUv1KtXL3Xv3l1S4zhBAACCgccQNAyDi2QAAEGp1XOCTVOkJSQkaM+ePUybBgC4KrTLXSS+//3v\ny2KxyDAM7dq166IXZ9o0AEDn5ctpu1ZDsKCgQJL00UcfacCAAe7l77///hWUBgCAfzVlYIMXU8e0\nGoJ///vfVVpaqt/97nf62c9+1viCDQ165ZVXtGXLlssurqCgQDk5ObJarZowYYIcDkez9bW1tZo/\nf76OHDmic+fO6Ve/+pW++c1vXvb2AADmcv58Y/iFeNEjbDUEo6OjVV5ervr6epWXl0tq7GK2Np+o\nN1wulxYvXqyNGzfKZrNp8uTJGj16tOLi4txtVq9erb59+2rJkiX67LPP9NlnnxGCAACvnTcavG7b\nagj27dtXffv2lcPhUFhYmA4fPqzExETFxsZedmGlpaVKTEyU3W6XJKWkpKiwsFBjxoxxt3n33Xd1\n5513KiMjQ1FRUXryyScve3sAAPOyyHNP0OOMMdu2bdPkyZOVm5ure+6554ruHOF0OhUVFeV+HBkZ\nKafT2axNZWWlqqqqtHr1ao0cOVJLliy57O0BAMyn6cIYQ1dwTrDJ66+/rjfeeEM2m021tbX6yU9+\noh/96Ec+FZSVlaWioiLt27dPycnJ7uU1NTWKjo5u1jY2NlajRo2SJI0aNUqrVq3yaVsAAHMLbY+r\nQ5t069ZNoaGhkqSIiIjLOhyamZkpqfGcYFpamqqqqhQREaHCwkJlZGQ0a5uSkqIdO3YoKSlJu3fv\n1k033eTz9gAA5tUu9xP894sZGjdunG699VaVlJTI5XJp1qxZkqRly5b5VJjVatWcOXM0bdo0GYYh\nh8Oh+Ph4nTlzRnPnzlV2drbuv/9+/epXv9KkSZMUFhbG4VAAgE8avDgM2sRiGG1n5u7du1tdd9tt\nt3lflR+VHK3p6BIA4KqVEGdTVMSFPpHFot3PvaTK4Xd0bFFXYNN7e7Wi4m4duL9Svb/e9tFLjz3B\npKQkrVy5UidOnNAdd9yhm2++WYmJie1WLAAAHcXj1aGPP/64EhISdOjQIXXv3l1PPPFEIOoCAOCy\n+HJhjMcQPH36tCZOnCir1apBgwapocH7QYgAAASaL3OHenVn+dLSUklSWVmZ+0pRAAA6Iw+XujTj\nMQSfeOIJPf744yopKdFDDz2kX/7yl1dUHAAA/uTNxNlNPF4Yc/PNN2vdunVXVBAAAJ1RqyE4atSo\nZsdVrVarXC6XwsPDtXXr1oAUBwCAP7Uagn/5y19kGIYWLFigSZMmacCAASopKdGrr74ayPoAAPCJ\nNxNnN2k1BMPDwyVJhw8fdt9UNykpSQcOHLjC8gAA6Bw8nhOMiopSVlaWBgwYoD179qhHjx6BqAsA\ngMviwwgJz1eHPvvss4qOjtbbb7+t7t27a+nSpVdSGwAAnYbHnmCXLl00bdq0QNQCAEBAeTVYHgCA\nYEQIAgBMixAEAJgWIQgAMC1CEAAQVLyfOZQQBAAEGx9SkBAEAASVBh9SkBAEAJgWIQgAMC2PM8YA\nANCZuc436ODxSn1RVq5Dp45rT1mRFOfdcwlBAECn1dBg6MipM/r8WLkOlZ/QkTNlKq8tU+W5Y3Ja\njups+BE1RB6RQs/9+0kXAtAa6vlgZ1CEYEKcraNLAICr1jVhoR227ROna7T/yAkdLD+hI6eP6/iX\nZao4d1ROHVVt2BGd73JECqv99xNsF/5JkmFRSE1PXXPmVkUZvdQ9/DpdF32d+sZ/Q4NuuEHX9Yj2\nuP2gCMGoiKB4GwAQ9D4/ekpP/t9nVBX2uVzXHJFszn+vDJMU8++Hli/jFeHsJ7vRS3FhvXRt5HW6\nqcc3NOAbiRp0U6JuvfFadYkIu6J6LIZh+DKuEAAQxE4W79feGpcsYeF+3U5oiEW2MKsiwsNkC7PK\nFm5VnP0adYkIU3gAe6aEIADAtBgiAQAwLUIQAOA3J0+e1MKFCy9ZvmzZMv3v//6vJOmVV16RJG3a\ntEnPPfdcq6915MgRpaSk6Je//KXH7b755pv6wQ9+0ObrSYQgAMCPunfvrieffLLNNi+++KLXr9en\nTx8tXrzYY7sxY8Zo+vTpHtsRggCAKzJ+/HhVVFTI5XIpJSVF//jHP9zLDxw4oHvuuUdSY+/sxz/+\nsTIyMrR3715J0ksvvaTTp0+7e4t79uxRRkaGxo8fr9dff73VbW7atEkPPfSQpk+frvHjx2vTpk16\n8MEHNWbMGBUUFHhdOyEIALgi3/nOd/Tuu++qqKhICQkJ+tvf/qbS0lJdf/31Cg8Pl8Vikcvl0pIl\nS/Tyyy9r9erVioiIkCQ98MADio2NdfcWw8PDtXr1av32t7/Vyy+/3OZ2a2pqlJubq5///OfKz8/X\n8uXLtXDhQm3cuNHr2q+qAXaGYWj+/Pn67LPPFB4erl//+tdKSEhwry8oKFBOTo6sVqsmTJggh8PR\ngdX6l6d9sWXLFq1Zs0ZWq1V9+/bV/PnzJTX+ZWa32yVJ1113nZ555pmOKD8gPO2jvLw8bdiwQXFx\njdNLLFy4UL179+6gav2rrX1x8uRJPfzww7JYLDIMQ59++qlmz56te+65x1SflyZ79+7Vs88+q7Vr\n1zZbbqbvF19997vf1UsvvaRrr71WDz/8sNasWaPz58/re9/7nrtNRUWFYmJiFB3dOID91ltvbfG1\nkpKSJEk9evTQ2bNn29xuU9uoqCjdcMMNkqSYmBjV1dV5XftVFYJvvfWW6uvrlZ+fr71792rRokXK\nycmRJLlcLi1evFgbN26UzWbT5MmTNXr0aPcXXLBpa1/U1dUpOztbW7ZsUXh4uGbNmqXt27fr29/+\ntiRpzZo1HVl6wLS1jySpuLhYS5cudf8iBbO29kX37t3dX/gffvihsrKydPfdd6u+vl6SeT4vkrRq\n1Spt3rxZkZGRzZab7fvFV3369NHhw4d18uRJzZo1Sy+++KIKCgqUl5enU6dOSZK6desmp9OpyspK\nde3aVR9//LF69ux5yWtZLBb3z55G8F3c9nJdVYdDi4qKNHz4cElScnKyPvnkE/e60tJSJSYmym63\nKywsTCkpKSosLOyoUv2urX0RHh6u/Px8hYc3DnZ1uVyy2Wz69NNP9eWXXyojI0M//elP3cfkg1Vb\n+0hqDMEVK1bo3nvvVW5ubkeUGDCe9kWTp556SgsWLJDFYjHd50WSEhMT9cILL1yy3GzfL5fjtttu\nU7du3Zr93HTIU5JCQ0M1d+5cZWRkaNq0aXK5XO51N954ox599NFLQq09Qs6Tq6onWF1draioKPdj\nq9WqhoYGhYSEXLIuMjJSTqezpZcJCm3tC4vF4v4Lde3ataqtrdXQoUO1b98+ZWRkyOFw6ODBg7rv\nvvv05pvpP/SSAAACfklEQVRvKiTkqvpbyGtt7SNJSktL03/+53/KbrfrF7/4hXbs2KHU1NSOKtev\nPO0LqfFwX9++fZWYmChJioiIMNXnRWo8rHfkyJFLlpvt++VyzJ492/3zzJkz3T/36tVL+fn5kqTU\n1NQWf8daOvcXHh6ubdu2XbK8qXf44x//2L1s+PDh7j/ybrnlFq1cudLruq+qT7PdbldNTY378cW/\nxHa7XdXV1e51NTU17mPPwaitfSE1flCWLFmi9957T8uXL5ck9e7dW3fddZf759jYWJWXlwe28ADy\ntI+mTp2q2NhYWa1WpaamqqSkpCPKDAhP+0KS3njjDd19993ux2b7vLTFbN8vnVlpaanX4wS9CcOr\nKgQHDRqkHTt2SGo8d9G3b1/3uhtvvFGHDh1SVVWV6uvrVVhYqIEDB3ZUqX7X1r6QpLlz5+rcuXPK\nyclxHxb9wx/+4B5fc/z4cdXU1KhHjx6BLTyA2tpH1dXVGjt2rGpra2UYhnbt2qX+/ft3VKl+5+nz\nIkmffPJJs4sVzPZ5udhXz0WZ7fuls+rVq5f+/ve/ez1O8M9//nOzXmlLrqq5Qy++wk2SFi1apOLi\nYtXW1srhcOjtt9/W8uXLZRiGJk6cqMmTJ3dwxf7T1r7o37+/Jk6cqJSUFEmNx9XT09M1cuRIPfbY\nYzp27JhCQkI0e/bsoP5F9vR5eeONN7RmzRrZbDYNGTJEDz74YAdX7D+e9kVFRYUyMjK0adMm93PO\nnTunOXPm6OjRo6b4vDQ5cuSIZs2apfz8fG3ZssWU3y9mclWFIAAA7emqOhwKAEB7IgQBAKZFCAIA\nTIsQBACYFiEIADAtQhAAYFqEIADAtP4/UzcZvYoE11IAAAAASUVORK5CYII=\n",
        "text": [
-        "<matplotlib.figure.Figure at 0x11c87fd50>"
+        "<matplotlib.figure.Figure at 0x11e2301d0>"
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.mgrid.width[0]"
+      "np.round(33*2,-1)/2"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<div style=\"max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>vertgrid</th>\n",
-        "      <th>latgrid</th>\n",
-        "      <th>vertfac</th>\n",
-        "      <th>latfac</th>\n",
-        "      <th>width</th>\n",
-        "      <th>depth</th>\n",
-        "      <th>cells</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td>140</td>\n",
-        "      <td>240</td>\n",
-        "      <td>-0.005</td>\n",
-        "      <td>0.005</td>\n",
-        "      <td>1.2</td>\n",
-        "      <td>-0.7</td>\n",
-        "      <td>33600</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 57,
+       "prompt_number": 83,
        "text": [
-        "   vertgrid  latgrid  vertfac  latfac  width  depth  cells\n",
-        "0       140      240   -0.005   0.005    1.2   -0.7  33600"
+        "35"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
