w05 partsizefac set to 250

--- a/echoRD2D_Weierbach_prep.ipynb
+++ b/echoRD2D_Weierbach_prep.ipynb
@@ -112,8 +112,8 @@
       "import run_echoRD as rE\n",
       "#connect and load project\n",
       "[dr,mc,mcp,pdyn,cinf,vG]=rE.loadconnect(pathdir='../',mcinif='mcini_weierbach_z05',experimental=True)\n",
-      "mc=rE.preproc_echoRD(mc, dr, mcp,'weierbach_z05.pickle')\n",
-      "#mc = mcp.mcpick_out(mc,'weierbach_z05.pickle')\n",
+      "#mc=rE.preproc_echoRD(mc, dr, mcp,'weierbach_z05.pickle')\n",
+      "mc = mcp.mcpick_out(mc,'weierbach_z05.pickle')\n",
       "runname='weierbach_z05'\n",
       "mc.advectref='Shipitalo'"
      ],
@@ -169,8 +169,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import macropore_ini as mpo\n",
-      "mpo.mac_plot(mc.macP,mc,'macs_'+runname+'.pdf')"
+      "#import macropore_ini as mpo\n",
+      "#mpo.mac_plot(mc.macP,mc,'macs_'+runname+'.pdf')"
      ],
      "language": "python",
      "metadata": {},
@@ -249,7 +249,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "precTS"
+      "#precTS"
      ],
      "language": "python",
      "metadata": {},
@@ -282,7 +282,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#precTS.tstart=60\n",
+      "precTS.tstart=10\n",
       "#precTS.tend=60+1800\n",
       "#precTS.total=0.04\n",
       "#precTS.intense=precTS.total/(precTS.tend-precTS.tstart)\n",
